--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,9 @@
         "jest": true
     },
     "rules": {
+        "no-unused-vars": "warn",
         "import/prefer-default-export": 0,
+        "react/require-default-props": 0,
         "react/react-in-jsx-scope": 0,
         "react-hooks/rules-of-hooks": "error",
         "no-console": "warn",
